@@ -262,6 +262,7 @@ export(xmu_twin_check)
 import(OpenMx)
 importFrom(DiagrammeR,DiagrammeR)
 importFrom(MASS,mvrnorm)
+importFrom(MuMIn,Weights)
 importFrom(cowplot,draw_label)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_text)
